--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Algorithm)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Algorithm
-        README.md)
+        main.cpp GoogleKickStar/Round_D_2019_1.cpp GoogleKickStar/Round_D_2019_1.h)
